--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -97,7 +97,7 @@ body {
   color: black;
   grid-column: 3;
   grid-row: 1 / 5;
-  background-image: url(../assets/backgroungImageBasicGreen.jpg);
+  background-image: url(../assets/BackgroundImage.png);
   background-size: cover;
   color: white;
   padding: 20px;
@@ -275,7 +275,7 @@ span.lvl {
 /*   background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)) url(../assets/backgroungImageBasicGreen.jpg); */
 
 #front {
-  background-image: url(../assets/backgroungImageBasicGreen.jpg);
+  background-image: url(../assets/BackgroundImage.png);
   height: 450px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -326,6 +326,12 @@ div#contact ul li {
 
 div#technologies ul li {
   list-style: none;
+}
+nav{
+  margin-left: 0% !important;
+}
+header{
+  padding-right: 0 !important;
 }
 
 div#skills ul li {
