--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,14 +22,41 @@ a,
 
 }
 
+table{
+  text-align: center;
+  width: 100%;
+  table-layout:fixed;
+  height: 85vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+thead th{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+
+
+
+.delete{
+  border-bottom: 1px solid white ;
+
+}
+.delete1{
+  border-left: 1px solid white;
+}
+.delete2{
+  border-right: 1px solid white;
+}
+
 
 
 @media screen and (max-width:1024px) {
   .personnalProject {
     display: block;
   }
-
-
 }
 
 @media screen and (min-width: 1024px) and (max-width:1440px) {
