--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -86,11 +86,17 @@ body {
   grid-auto-rows: minmax(100px, auto);
   margin-top: 45px
 }
+#titleCv{
+  color: white !important;
+}
 
 #exp {
   color: black;
   grid-column: 1 / 3;
   grid-row: 1 / 5;
+}
+h2 {
+  color: white;
 }
 
 #data {
@@ -103,6 +109,9 @@ body {
   padding: 20px;
 }
 
+#exp{
+  padding-left: 10px;
+}
 
 #imgProfile {
   display: block;
